add span for ing

--- a/asli-2.ipynb
+++ b/asli-2.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,15 +130,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findSpanIngredient(ingut: str, quantity, ingredients):\n",
+    "    span = []\n",
+    "    last = 0\n",
+    "    for ing in ingredients:\n",
+    "        first = ingut.index(ing)\n",
+    "        while (last < first):\n",
+    "            last = ingut.index(chr(10),last+1)\n",
+    "        span.append([first,last])\n",
+    "    return span"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_ingredients(ingut : str):\n",
     "    ingredients = []\n",
     "    quantity = []\n",
-    "    if \"لازم\" in ingut.split(\"\\n\")[0]:\n",
-    "        starting_index = ingut.index(\"لازم\")\n",
+    "    span_ingredients = []\n",
+    "    if \"مواد\" in ingut.split(\"\\n\")[0]:\n",
+    "        starting_index = ingut.index(\"مواد\")\n",
     "    else:\n",
     "        starting_index = 0\n",
     "    prepare_spliter = [\"طرز تهیه\", \"روش تهیه\", \"طرزتهیه:\"]\n",
@@ -146,36 +164,38 @@
     "    for element in prepare_spliter:\n",
     "            try:\n",
     "                ending_index = ingut.index(element)\n",
+    "                break\n",
     "            except:\n",
     "                continue\n",
     "    \n",
     "    ing_data = ingut[starting_index:ending_index]\n",
-    "    if \"لازم\" in ingut.split(\"\\n\")[0]:\n",
+    "    if \"مواد\" in ingut.split(\"\\n\")[0]:\n",
     "        ing_data= ing_data.split(\"\\n\",1)[1]\n",
     "    \n",
     "    find_recipe(ingut ,ending_index)\n",
     "    \n",
     "    spliter = ['0', '۰','1', '۱', '2', '۲', '3', '۳', '4', '۴', '5', '۵', '6',\n",
-    "               '۶', '7', '۷', '8', '۸', '9', '۹', 'یک',\n",
-    "               'دو', 'نیم', 'به مقدار لازم', 'به میزان لازم', 'نصف','مقداری']\n",
+    "               '۶', '7', '۷', '8', '۸', '9', '۹', 'یک ', 'یک‌',\n",
+    "               'دو ', 'دو‌', 'سه ', 'سه‌','نیم', 'نیم‌', 'به مقدار لازم', 'به میزان لازم', 'نصف ', 'نصف‌','مقداری']\n",
     "    \n",
-    "    print(ing_data)\n",
-    "    while(True):\n",
-    "        \n",
+    "    while (True):    \n",
     "        spliterIndex = []\n",
     "        for i in spliter:\n",
     "            try:\n",
     "                spliterIndex.append(ing_data.index(i))\n",
     "            except:\n",
     "                spliterIndex.append(9223372036854775807)\n",
-    "        \n",
-    "        endline = ing_data.index(chr(10)) \n",
+    "        endline = 0\n",
+    "        try:\n",
+    "            endline = ing_data.index(chr(10)) \n",
+    "        except:\n",
+    "            pass\n",
     "        middle = min(spliterIndex)\n",
-    "        ing = ing_data[0:middle].strip()\n",
-    "        if (middle > endline):\n",
-    "            ing_data = ing_data[endline+1:]\n",
-    "            continue\n",
     "        \n",
+    "        if (middle > endline):\n",
+    "            middle = endline\n",
+    "        \n",
+    "        ing = ing_data[0:middle].strip()\n",
     "        quant = ing_data[middle:endline].strip()\n",
     "        \n",
     "        while (1 < ord(ing[len(ing) - 1]) < 255):\n",
@@ -187,19 +207,21 @@
     "        if (len(ing_data) == 0):\n",
     "            break\n",
     "    \n",
-    "    print(\"ingredients: \")\n",
-    "    print(*ingredients, sep='\\n')\n",
-    "    print(len(ingredients))\n",
-    "    print()\n",
-    "    print(\"quantity: \")\n",
-    "    print(*quantity, sep='\\n')\n",
-    "    print(len(quantity))\n",
+    "    # print(\"ingredients: \")\n",
+    "    # print(*ingredients, sep='\\n')\n",
+    "    # print(len(ingredients))\n",
+    "    # print()\n",
+    "    # print(\"quantity: \")\n",
+    "    # print(*quantity, sep='\\n')\n",
+    "    # print(len(quantity))\n",
+    "    span_ingredients = findSpanIngredient(ingut, ingredients, quantity)\n",
+    "    return (ingredients, quantity, span_ingredients)\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -221,36 +243,56 @@
       "اردک باشه رب انار و گوجه را با\n",
       "همراه نصف لیوان آب مͳ گذاریم تا\n",
       "ملایم بپزد.\n",
-      "ورودی نمونه:\n",
-      "مواد لازم:\n",
-      "اردک درسته ۱ عدد\n",
-      "پیاز ۱ عدد\n",
-      "انار ۳ قاشق غذاخوری\n",
-      "رب گوجه ۱ قاشق غذاخوری\n",
-      "رب نارن; ۲ ق غ\n",
-      "نمΈ و فلفل و ادویه\n",
-      "سبزی معطر\n",
-      "\n"
+      "22\n",
+      "22\n",
+      "44\n",
+      "67\n",
+      "91\n",
+      "0\n",
+      "0\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "substring not found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-57-cbe3fb5cfeca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'input.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mlines\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mfind_ingredients\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlines\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-55-ea5fffc70584>\u001b[0m in \u001b[0;36mfind_ingredients\u001b[0;34m(ingut)\u001b[0m\n\u001b[1;32m     34\u001b[0m                 \u001b[0mspliterIndex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9223372036854775807\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0mendline\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ming_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m         \u001b[0mmiddle\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspliterIndex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0ming\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ming_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mmiddle\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: substring not found"
-     ]
+     "data": {
+      "text/plain": [
+       "{'Ingredients': ['اردک درسته',\n",
+       "  'پیاز',\n",
+       "  'انار',\n",
+       "  'رب گوجه',\n",
+       "  'رب نارن',\n",
+       "  'نمک و فلفل و ادویه',\n",
+       "  'سبزی معطر'],\n",
+       " 'quantity': ['۱ عدد',\n",
+       "  '۱ عدد',\n",
+       "  '۳ قاشق غذاخوری',\n",
+       "  '۱ قاشق غذاخوری',\n",
+       "  '۲ ق غ',\n",
+       "  '',\n",
+       "  ''],\n",
+       " 'span_ingredients': [[22, 27],\n",
+       "  [22, 27],\n",
+       "  [44, 58],\n",
+       "  [67, 81],\n",
+       "  [91, 96],\n",
+       "  [0, 96],\n",
+       "  [0, 96]]}"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "lines = ''\n",
     "with open('input.txt', 'r',  encoding='utf-8') as f:\n",
     "    lines = f.read()\n",
-    "find_ingredients(lines)"
+    "ingredients, quantity, span_ingredients = find_ingredients(lines)\n",
+    "final_dict = {}\n",
+    "final_dict.update({'Ingredients': ingredients})\n",
+    "final_dict.update({'quantity': quantity})\n",
+    "final_dict.update({'span_ingredients': span_ingredients})\n",
+    "final_dict"
    ]
   },
   {
