--- a/asli-2.ipynb
+++ b/asli-2.ipynb
@@ -130,11 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def findSpanIngredient(ingut: str, quantity, ingredients):\n",
+    "def findSpanIngredient(ingut: str, ingredients, quantity):\n",
     "    span = []\n",
     "    last = 0\n",
     "    for ing in ingredients:\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -242,14 +242,7 @@
       "مͳ کنیم. سپس در قابلمه ای که اندازه\n",
       "اردک باشه رب انار و گوجه را با\n",
       "همراه نصف لیوان آب مͳ گذاریم تا\n",
-      "ملایم بپزد.\n",
-      "22\n",
-      "22\n",
-      "44\n",
-      "67\n",
-      "91\n",
-      "0\n",
-      "0\n"
+      "ملایم بپزد.\n"
      ]
     },
     {
@@ -269,16 +262,16 @@
        "  '۲ ق غ',\n",
        "  '',\n",
        "  ''],\n",
-       " 'span_ingredients': [[22, 27],\n",
-       "  [22, 27],\n",
-       "  [44, 58],\n",
-       "  [67, 81],\n",
-       "  [91, 96],\n",
-       "  [0, 96],\n",
-       "  [0, 96]]}"
+       " 'span_ingredients': [[11, 27],\n",
+       "  [28, 38],\n",
+       "  [39, 58],\n",
+       "  [59, 81],\n",
+       "  [82, 96],\n",
+       "  [97, 115],\n",
+       "  [116, 125]]}"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
