fix: ingredient bug

--- a/asli-2.ipynb
+++ b/asli-2.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
     "    last = 0\n",
     "    for ing in ingredients:\n",
     "        first = ingut.index(ing)\n",
-    "        while (last < first):\n",
+    "        while (last <= first):\n",
     "            last = ingut.index(chr(10),last+1)\n",
     "        span.append([first,last])\n",
     "    return span"
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,8 @@
     "    \n",
     "    spliter = ['0', '۰','1', '۱', '2', '۲', '3', '۳', '4', '۴', '5', '۵', '6',\n",
     "               '۶', '7', '۷', '8', '۸', '9', '۹', 'یک ', 'یک‌',\n",
-    "               'دو ', 'دو‌', 'سه ', 'سه‌','نیم', 'نیم‌', 'به مقدار لازم', 'به میزان لازم', 'نصف ', 'نصف‌','مقداری']\n",
+    "               'دو ', 'دو‌', 'سه ', 'سه‌','نیم', 'نیم‌', 'به مقدار لازم', 'به میزان لازم',\n",
+    "               'نصف ', 'نصف‌','مقداری', 'به میزان کافی']\n",
     "    \n",
     "    while (True):    \n",
     "        spliterIndex = []\n",
@@ -198,22 +199,15 @@
     "        ing = ing_data[0:middle].strip()\n",
     "        quant = ing_data[middle:endline].strip()\n",
     "        \n",
-    "        while (1 < ord(ing[len(ing) - 1]) < 255):\n",
-    "            ing = ing[0:len(ing)-1]\n",
+    "        ing = ing.replace('=', '').strip()\n",
+    "        ing = ing.replace(':', '').strip()\n",
     "        \n",
     "        ingredients.append(ing)\n",
     "        quantity.append(quant)\n",
     "        ing_data = ing_data[endline+1:]\n",
     "        if (len(ing_data) == 0):\n",
     "            break\n",
-    "    \n",
-    "    # print(\"ingredients: \")\n",
-    "    # print(*ingredients, sep='\\n')\n",
-    "    # print(len(ingredients))\n",
-    "    # print()\n",
-    "    # print(\"quantity: \")\n",
-    "    # print(*quantity, sep='\\n')\n",
-    "    # print(len(quantity))\n",
+    "        \n",
     "    span_ingredients = findSpanIngredient(ingut, ingredients, quantity)\n",
     "    return (ingredients, quantity, span_ingredients)\n",
     "   "
@@ -221,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -229,49 +223,37 @@
      "output_type": "stream",
      "text": [
       "recipe: \n",
-      " اردک را بعد از شستشو و تمیز کردن\n",
-      "با ادویه و نمΈ و فلفل مزه دار\n",
-      "مͳ کنیم؛ و پیاز را طلایی کرده و\n",
-      "به آن زردچوبه اضافه مͳ کنیم سپس\n",
-      "انار و سبزی را اضافه کرده و خیلͳ\n",
-      "کم تفت مͳ دهیم و در آخر ادویه را\n",
-      "اضافه مͳ کنیم. بعد از خنک شدن\n",
-      "مواد داخل ش΋م اردک را از مواد پر\n",
-      "کرده و با خلال دندان ش΋م اردک\n",
-      "را مͳ بندیم و در تابه ای آن را سرخ\n",
-      "مͳ کنیم. سپس در قابلمه ای که اندازه\n",
-      "اردک باشه رب انار و گوجه را با\n",
-      "همراه نصف لیوان آب مͳ گذاریم تا\n",
-      "ملایم بپزد.\n"
+      " \n",
+      "ماهی را پس از شستن و تکه کردن به آن نمک‌زده و آن را سرخ می‌کنیم وکنار می‌گذاریم. سیرها را کوبیده با پیاز رنده شده تفت‌می‌دهیم و رب گوجه فرنگی را در یک لیوان آب‌حل کرده و به آن اضافه می‌کنیم. وقتی به جوش‌آمد، نمک و فلفل و ادویه را به آن اضافه کرده ومی‌گذاریم بجوشد، در آخر به آن زعفران اضافه‌کرده و روی ماهی سرخ شده می‌ریزیم. این غذاتند می‌باشد و می‌توانید مواد را لابه لای برنج هم‌گذاشته و میل نمایید.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Ingredients': ['اردک درسته',\n",
-       "  'پیاز',\n",
-       "  'انار',\n",
-       "  'رب گوجه',\n",
-       "  'رب نارن',\n",
-       "  'نمک و فلفل و ادویه',\n",
-       "  'سبزی معطر'],\n",
-       " 'quantity': ['۱ عدد',\n",
+       "{'Ingredients': ['',\n",
+       "  'ماهی متوسط',\n",
+       "  'رب گوجه فرنگی',\n",
+       "  'نمک و ادویه و زعفران',\n",
+       "  'سیر',\n",
+       "  'پیاز متوسط',\n",
+       "  'فلفل قرمز'],\n",
+       " 'quantity': ['',\n",
        "  '۱ عدد',\n",
-       "  '۳ قاشق غذاخوری',\n",
-       "  '۱ قاشق غذاخوری',\n",
-       "  '۲ ق غ',\n",
-       "  '',\n",
-       "  ''],\n",
-       " 'span_ingredients': [[11, 27],\n",
-       "  [28, 38],\n",
-       "  [39, 58],\n",
-       "  [59, 81],\n",
-       "  [82, 96],\n",
-       "  [97, 115],\n",
-       "  [116, 125]]}"
+       "  '۲ قاشق غذا خوری',\n",
+       "  'به میزان کافی',\n",
+       "  '۵-۶ حبه',\n",
+       "  '۱ عدد',\n",
+       "  '۱ قاشق غذاخوری'],\n",
+       " 'span_ingredients': [[0, 10],\n",
+       "  [12, 29],\n",
+       "  [30, 60],\n",
+       "  [61, 96],\n",
+       "  [97, 109],\n",
+       "  [110, 127],\n",
+       "  [128, 153]]}"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
