fix: ingredient bug

--- a/asli-2.ipynb
+++ b/asli-2.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,10 @@
     "    span = []\n",
     "    last = 0\n",
     "    for ing in ingredients:\n",
-    "        first = ingut.index(ing)\n",
+    "        try: \n",
+    "            first = ingut.index(ing)\n",
+    "        except:\n",
+    "            first = last + 1\n",
     "        while (last <= first):\n",
     "            last = ingut.index(chr(10),last+1)\n",
     "        span.append([first,last])\n",
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +256,7 @@
        "  [128, 153]]}"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
