add multiple recipe

--- a/asli-2.ipynb
+++ b/asli-2.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
     "    spliter = ['0', '۰','1', '۱', '2', '۲', '3', '۳', '4', '۴', '5', '۵', '6',\n",
     "               '۶', '7', '۷', '8', '۸', '9', '۹', 'یک ', 'یک‌',\n",
     "               'دو ', 'دو‌', 'سه ', 'سه‌','نیم', 'نیم‌', 'به مقدار لازم', 'به میزان لازم',\n",
-    "               'نصف ', 'نصف‌','مقداری', 'به میزان کافی']\n",
+    "               'نصف ', 'نصف‌','مقداری', 'به میزان کافی', 'کمتر از', 'دوقاشق']\n",
     "    \n",
     "    while (True):    \n",
     "        spliterIndex = []\n",
@@ -218,7 +218,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findRecipeIndex(s: str, ch: str):\n",
+    "    indexes = []\n",
+    "    first = 0\n",
+    "    while (True):\n",
+    "        try:\n",
+    "            first = s.index(ch, first)\n",
+    "            indexes.append(first)\n",
+    "            first += 1\n",
+    "        except:\n",
+    "            break\n",
+    "    return indexes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -226,37 +245,50 @@
      "output_type": "stream",
      "text": [
       "recipe: \n",
-      " \n",
-      "ماهی را پس از شستن و تکه کردن به آن نمک‌زده و آن را سرخ می‌کنیم وکنار می‌گذاریم. سیرها را کوبیده با پیاز رنده شده تفت‌می‌دهیم و رب گوجه فرنگی را در یک لیوان آب‌حل کرده و به آن اضافه می‌کنیم. وقتی به جوش‌آمد، نمک و فلفل و ادویه را به آن اضافه کرده ومی‌گذاریم بجوشد، در آخر به آن زعفران اضافه‌کرده و روی ماهی سرخ شده می‌ریزیم. این غذاتند می‌باشد و می‌توانید مواد را لابه لای برنج هم‌گذاشته و میل نمایید.\n"
+      " اردک را بعد از شستشو و تمیز کردن\n",
+      "با ادویه و نمΈ و فلفل مزه دار\n",
+      "مͳ کنیم؛ و پیاز را طلایی کرده و\n",
+      "به آن زردچوبه اضافه مͳ کنیم سپس\n",
+      "انار و سبزی را اضافه کرده و خیلͳ\n",
+      "کم تفت مͳ دهیم و در آخر ادویه را\n",
+      "اضافه مͳ کنیم. بعد از خنک شدن\n",
+      "مواد داخل ش΋م اردک را از مواد پر\n",
+      "کرده و با خلال دندان ش΋م اردک\n",
+      "را مͳ بندیم و در تابه ای آن را سرخ\n",
+      "مͳ کنیم. سپس در قابلمه ای که اندازه\n",
+      "اردک باشه رب انار و گوجه را با\n",
+      "همراه نصف لیوان آب مͳ گذاریم تا\n",
+      "ملایم بپزد.\n",
+      "{'Ingredients': ['اردک درسته', 'پیاز', 'انار', 'رب گوجه', 'رب نارن;', 'نمΈ و فلفل و ادویه', 'سبزی معطر'], 'quantity': ['۱ عدد', '۱ عدد', '۳ قاشق غذاخوری', '۱ قاشق غذاخوری', '۲ ق غ', '', ''], 'span_ingredients': [[0, 16], [17, 27], [28, 47], [48, 70], [71, 85], [86, 104], [105, 114]]}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Ingredients': ['',\n",
-       "  'ماهی متوسط',\n",
-       "  'رب گوجه فرنگی',\n",
-       "  'نمک و ادویه و زعفران',\n",
-       "  'سیر',\n",
-       "  'پیاز متوسط',\n",
-       "  'فلفل قرمز'],\n",
-       " 'quantity': ['',\n",
-       "  '۱ عدد',\n",
-       "  '۲ قاشق غذا خوری',\n",
-       "  'به میزان کافی',\n",
-       "  '۵-۶ حبه',\n",
-       "  '۱ عدد',\n",
-       "  '۱ قاشق غذاخوری'],\n",
-       " 'span_ingredients': [[0, 10],\n",
-       "  [12, 29],\n",
-       "  [30, 60],\n",
-       "  [61, 96],\n",
-       "  [97, 109],\n",
-       "  [110, 127],\n",
-       "  [128, 153]]}"
+       "[{'Ingredients': ['اردک درسته',\n",
+       "   'پیاز',\n",
+       "   'انار',\n",
+       "   'رب گوجه',\n",
+       "   'رب نارن;',\n",
+       "   'نمΈ و فلفل و ادویه',\n",
+       "   'سبزی معطر'],\n",
+       "  'quantity': ['۱ عدد',\n",
+       "   '۱ عدد',\n",
+       "   '۳ قاشق غذاخوری',\n",
+       "   '۱ قاشق غذاخوری',\n",
+       "   '۲ ق غ',\n",
+       "   '',\n",
+       "   ''],\n",
+       "  'span_ingredients': [[0, 16],\n",
+       "   [17, 27],\n",
+       "   [28, 47],\n",
+       "   [48, 70],\n",
+       "   [71, 85],\n",
+       "   [86, 104],\n",
+       "   [105, 114]]}]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,12 +297,23 @@
     "lines = ''\n",
     "with open('input.txt', 'r',  encoding='utf-8') as f:\n",
     "    lines = f.read()\n",
-    "ingredients, quantity, span_ingredients = find_ingredients(lines)\n",
-    "final_dict = {}\n",
-    "final_dict.update({'Ingredients': ingredients})\n",
-    "final_dict.update({'quantity': quantity})\n",
-    "final_dict.update({'span_ingredients': span_ingredients})\n",
-    "final_dict"
+    "all_dicts = []\n",
+    "indexes = findRecipeIndex(lines, 'دستور شمار')\n",
+    "if len(indexes) == 0:\n",
+    "    indexes.append(0)\n",
+    "indexes.append(len(lines))\n",
+    "for i in range(len(indexes)-1):\n",
+    "    first = indexes[i]\n",
+    "    first = lines.find(chr(10),first) + 1\n",
+    "    last = indexes[i+1]\n",
+    "    ingredients, quantity, span_ingredients = find_ingredients(lines[first:last])\n",
+    "    final_dict = {}\n",
+    "    final_dict.update({'Ingredients': ingredients})\n",
+    "    final_dict.update({'quantity': quantity})\n",
+    "    final_dict.update({'span_ingredients': span_ingredients})\n",
+    "    print(final_dict)\n",
+    "    all_dicts.append(final_dict)\n",
+    "all_dicts"
    ]
   },
   {
