--- a/asli-2.ipynb
+++ b/asli-2.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,17 +133,16 @@
     "    recipe = input_recipe[index:]\n",
     "    newline_index = recipe.index(chr(10)) \n",
     "    recipe = recipe[newline_index + 1:]\n",
-    "    print(\"recipe: \\n\", recipe)\n",
-    "    "
+    "    return recipe, [index + newline_index + 1, len(input_recipe)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def findSpanIngredient(ingut: str, ingredients, quantity):\n",
+    "def findSpanIngredient(ingut: str, ingredients):\n",
     "    span = []\n",
     "    last = 0\n",
     "    for ing in ingredients:\n",
@@ -150,11 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_ingredients(ingut : str):\n",
+    "    start_time = time.time()\n",
+    "    \n",
     "    ingredients = []\n",
     "    quantity = []\n",
     "    span_ingredients = []\n",
@@ -162,7 +172,7 @@
     "        starting_index = ingut.index(\"مواد\")\n",
     "    else:\n",
     "        starting_index = 0\n",
-    "    prepare_spliter = [\"طرز تهیه\", \"روش تهیه\", \"طرزتهیه:\"]\n",
+    "    prepare_spliter = [\"طرز تهیه\", \"روش تهیه\", \"طرزتهیه\"]\n",
     "    ending_index = 0\n",
     "    for element in prepare_spliter:\n",
     "            try:\n",
@@ -174,9 +184,7 @@
     "    ing_data = ingut[starting_index:ending_index]\n",
     "    if \"مواد\" in ingut.split(\"\\n\")[0]:\n",
     "        ing_data= ing_data.split(\"\\n\",1)[1]\n",
-    "    \n",
-    "    find_recipe(ingut ,ending_index)\n",
-    "    \n",
+    "        \n",
     "    spliter = ['0', '۰','1', '۱', '2', '۲', '3', '۳', '4', '۴', '5', '۵', '6',\n",
     "               '۶', '7', '۷', '8', '۸', '9', '۹', 'یک ', 'یک‌',\n",
     "               'دو ', 'دو‌', 'سه ', 'سه‌','نیم', 'نیم‌', 'به مقدار لازم', 'به میزان لازم',\n",
@@ -210,15 +218,19 @@
     "        ing_data = ing_data[endline+1:]\n",
     "        if (len(ing_data) == 0):\n",
     "            break\n",
-    "        \n",
-    "    span_ingredients = findSpanIngredient(ingut, ingredients, quantity)\n",
-    "    return (ingredients, quantity, span_ingredients)\n",
+    "            \n",
+    "    recipe, span_recipe = find_recipe(ingut ,ending_index)\n",
+    "    span_ingredients = findSpanIngredient(ingut, ingredients)\n",
+    "    \n",
+    "    end_time = time.time()\n",
+    "    \n",
+    "    return (ingredients, quantity, recipe, span_ingredients, span_recipe, end_time - start_time)\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,63 +249,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "recipe: \n",
-      " اردک را بعد از شستشو و تمیز کردن\n",
-      "با ادویه و نمΈ و فلفل مزه دار\n",
-      "مͳ کنیم؛ و پیاز را طلایی کرده و\n",
-      "به آن زردچوبه اضافه مͳ کنیم سپس\n",
-      "انار و سبزی را اضافه کرده و خیلͳ\n",
-      "کم تفت مͳ دهیم و در آخر ادویه را\n",
-      "اضافه مͳ کنیم. بعد از خنک شدن\n",
-      "مواد داخل ش΋م اردک را از مواد پر\n",
-      "کرده و با خلال دندان ش΋م اردک\n",
-      "را مͳ بندیم و در تابه ای آن را سرخ\n",
-      "مͳ کنیم. سپس در قابلمه ای که اندازه\n",
-      "اردک باشه رب انار و گوجه را با\n",
-      "همراه نصف لیوان آب مͳ گذاریم تا\n",
-      "ملایم بپزد.\n",
-      "{'Ingredients': ['اردک درسته', 'پیاز', 'انار', 'رب گوجه', 'رب نارن;', 'نمΈ و فلفل و ادویه', 'سبزی معطر'], 'quantity': ['۱ عدد', '۱ عدد', '۳ قاشق غذاخوری', '۱ قاشق غذاخوری', '۲ ق غ', '', ''], 'span_ingredients': [[0, 16], [17, 27], [28, 47], [48, 70], [71, 85], [86, 104], [105, 114]]}\n"
+     "ename": "ValueError",
+     "evalue": "substring not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5728/4168332085.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[0mfirst\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlines\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfirst\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mlast\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindexes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mingredients\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mquantity\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecipe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspan_ingredients\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspan_recipe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtime_passed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfind_ingredients\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlines\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfirst\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mlast\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[0mfinal_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[0mfinal_dict\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'Ingredients'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mingredients\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5728/1709624621.py\u001b[0m in \u001b[0;36mfind_ingredients\u001b[1;34m(ingut)\u001b[0m\n\u001b[0;32m     56\u001b[0m             \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m     \u001b[0mrecipe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspan_recipe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfind_recipe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mingut\u001b[0m \u001b[1;33m,\u001b[0m\u001b[0mending_index\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m     \u001b[0mspan_ingredients\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfindSpanIngredient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mingut\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mingredients\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5728/1899149047.py\u001b[0m in \u001b[0;36mfind_recipe\u001b[1;34m(input_recipe, index)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfind_recipe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_recipe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mrecipe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput_recipe\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mnewline_index\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrecipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mrecipe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrecipe\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnewline_index\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mrecipe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnewline_index\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_recipe\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: substring not found"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'Ingredients': ['اردک درسته',\n",
-       "   'پیاز',\n",
-       "   'انار',\n",
-       "   'رب گوجه',\n",
-       "   'رب نارن;',\n",
-       "   'نمΈ و فلفل و ادویه',\n",
-       "   'سبزی معطر'],\n",
-       "  'quantity': ['۱ عدد',\n",
-       "   '۱ عدد',\n",
-       "   '۳ قاشق غذاخوری',\n",
-       "   '۱ قاشق غذاخوری',\n",
-       "   '۲ ق غ',\n",
-       "   '',\n",
-       "   ''],\n",
-       "  'span_ingredients': [[0, 16],\n",
-       "   [17, 27],\n",
-       "   [28, 47],\n",
-       "   [48, 70],\n",
-       "   [71, 85],\n",
-       "   [86, 104],\n",
-       "   [105, 114]]}]"
-      ]
-     },
-     "execution_count": 163,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import time\n",
+    "\n",
     "lines = ''\n",
     "with open('input.txt', 'r',  encoding='utf-8') as f:\n",
     "    lines = f.read()\n",
@@ -304,24 +279,20 @@
     "indexes.append(len(lines))\n",
     "for i in range(len(indexes)-1):\n",
     "    first = indexes[i]\n",
-    "    first = lines.find(chr(10),first) + 1\n",
+    "    if indexes[i] != 0:\n",
+    "        first = lines.find(chr(10),first) + 1\n",
     "    last = indexes[i+1]\n",
-    "    ingredients, quantity, span_ingredients = find_ingredients(lines[first:last])\n",
+    "    ingredients, quantity, recipe, span_ingredients, span_recipe, time_passed = find_ingredients(lines[first:last])\n",
     "    final_dict = {}\n",
     "    final_dict.update({'Ingredients': ingredients})\n",
     "    final_dict.update({'quantity': quantity})\n",
+    "    final_dict.update({'recipie': recipe})\n",
     "    final_dict.update({'span_ingredients': span_ingredients})\n",
-    "    print(final_dict)\n",
+    "    final_dict.update({'span_recipie': span_recipe})\n",
+    "    final_dict.update({'time': time_passed})\n",
     "    all_dicts.append(final_dict)\n",
     "all_dicts"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
