--- a/asli-2.ipynb
+++ b/asli-2.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "98106434 -> Mohammad Khodadadi Aski\n",
+    "98106434 <span style='font-size:larger;'>→</span> Mohammad Khodadadi Aski\n",
     "<br>\n",
-    "98105919 -> Reza Erfan Arani\n",
+    "98105919 <span style='font-size:larger;'>→</span> Reza Erfan Arani\n",
     "<br>\n",
-    "98101566 -> Mohammadreza Daviran\n",
+    "98101566 <span style='font-size:larger;'>→</span> Mohammadreza Daviran\n",
     "<br>\n",
     "\n",
     "\n",
@@ -19,74 +19,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: hazm in c:\\users\\reza\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (0.7.0)\n",
-      "Requirement already satisfied: nltk==3.3 in c:\\users\\reza\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hazm) (3.3)\n",
-      "Requirement already satisfied: six in c:\\users\\reza\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk==3.3->hazm) (1.16.0)\n",
-      "Collecting selenium\n",
-      "  Downloading selenium-4.1.3-py3-none-any.whl (968 kB)\n",
-      "     ------------------------------------ 968.8/968.8 KB 358.8 kB/s eta 0:00:00\n",
-      "Collecting trio~=0.17\n",
-      "  Downloading trio-0.20.0-py3-none-any.whl (359 kB)\n",
-      "     ------------------------------------ 359.0/359.0 KB 360.3 kB/s eta 0:00:00\n",
-      "Requirement already satisfied: urllib3[secure,socks]~=1.26 in c:\\users\\reza\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from selenium) (1.26.7)\n",
-      "Collecting trio-websocket~=0.9\n",
-      "  Downloading trio_websocket-0.9.2-py3-none-any.whl (16 kB)\n",
-      "Requirement already satisfied: cffi>=1.14 in c:\\users\\reza\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from trio~=0.17->selenium) (1.15.0)\n",
-      "Collecting sniffio\n",
-      "  Downloading sniffio-1.2.0-py3-none-any.whl (10 kB)\n",
-      "Requirement already satisfied: attrs>=19.2.0 in c:\\users\\reza\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from trio~=0.17->selenium) (21.4.0)\n",
-      "Collecting async-generator>=1.9\n",
-      "  Downloading async_generator-1.10-py3-none-any.whl (18 kB)\n",
-      "Requirement already satisfied: idna in c:\\users\\reza\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from trio~=0.17->selenium) (3.3)\n",
-      "Collecting outcome\n",
-      "  Downloading outcome-1.1.0-py2.py3-none-any.whl (9.7 kB)\n",
-      "Collecting sortedcontainers\n",
-      "  Downloading sortedcontainers-2.4.0-py2.py3-none-any.whl (29 kB)\n",
-      "Collecting wsproto>=0.14\n",
-      "  Downloading wsproto-1.1.0-py3-none-any.whl (24 kB)\n",
-      "Collecting PySocks!=1.5.7,<2.0,>=1.5.6\n",
-      "  Downloading PySocks-1.7.1-py3-none-any.whl (16 kB)\n",
-      "Requirement already satisfied: certifi in c:\\users\\reza\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from urllib3[secure,socks]~=1.26->selenium) (2021.10.8)\n",
-      "Collecting cryptography>=1.3.4\n",
-      "  Downloading cryptography-36.0.2-cp36-abi3-win_amd64.whl (2.2 MB)\n",
-      "     ---------------------------------------- 2.2/2.2 MB 365.0 kB/s eta 0:00:00\n",
-      "Collecting pyOpenSSL>=0.14\n",
-      "  Downloading pyOpenSSL-22.0.0-py2.py3-none-any.whl (55 kB)\n",
-      "     -------------------------------------- 55.8/55.8 KB 970.1 kB/s eta 0:00:00\n",
-      "Requirement already satisfied: pycparser in c:\\users\\reza\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.20)\n",
-      "Collecting h11<1,>=0.9.0\n",
-      "  Downloading h11-0.13.0-py3-none-any.whl (58 kB)\n",
-      "     -------------------------------------- 58.2/58.2 KB 339.8 kB/s eta 0:00:00\n",
-      "Installing collected packages: sortedcontainers, sniffio, PySocks, outcome, h11, async-generator, wsproto, trio, cryptography, trio-websocket, pyOpenSSL, selenium\n",
-      "Successfully installed PySocks-1.7.1 async-generator-1.10 cryptography-36.0.2 h11-0.13.0 outcome-1.1.0 pyOpenSSL-22.0.0 selenium-4.1.3 sniffio-1.2.0 sortedcontainers-2.4.0 trio-0.20.0 trio-websocket-0.9.2 wsproto-1.1.0\n",
-      "Collecting bs4\n",
-      "  Downloading bs4-0.0.1.tar.gz (1.1 kB)\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Collecting beautifulsoup4\n",
-      "  Downloading beautifulsoup4-4.11.1-py3-none-any.whl (128 kB)\n",
-      "     ------------------------------------ 128.2/128.2 KB 342.8 kB/s eta 0:00:00\n",
-      "Collecting soupsieve>1.2\n",
-      "  Downloading soupsieve-2.3.2.post1-py3-none-any.whl (37 kB)\n",
-      "Using legacy 'setup.py install' for bs4, since package 'wheel' is not installed.\n",
-      "Installing collected packages: soupsieve, beautifulsoup4, bs4\n",
-      "  Running setup.py install for bs4: started\n",
-      "  Running setup.py install for bs4: finished with status 'done'\n",
-      "Successfully installed beautifulsoup4-4.11.1 bs4-0.0.1 soupsieve-2.3.2.post1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install hazm\n",
     "!pip install selenium\n",
     "!pip install bs4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the code bellow we do the following tasks:\n",
+    "<br>\n",
+    "Normalization :\n",
+    "<br>\n",
+    "In normalization we delete the spaces which dont have any meaning .\n",
+    "<br>\n",
+    "Tokenized_sent_input <span style='font-size:larger;'>→</span> We use the sent_tokenize method of hazm library in order to tokenize the sentences of our input.\n",
+    "<br>\n",
+    "Tokenized_word_input <span style='font-size:larger;'>→</span> We use the word_tokenize method of hazm library to tokenize our input word by word.\n",
+    "<br>\n",
+    "Then we stem our normlized input in order to send the words to their root word, but we dont use it in this project because of our tasks which we can afford loosing any data.\n",
+    "<br>\n",
+    "We have the same thing with the lemmatizer."
    ]
   },
   {
@@ -115,12 +73,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 228,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# import time"
+    "In the following function, we extracted recipe from the data using the index given."
    ]
   },
   {
@@ -137,8 +93,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following code block, we find the spans of different ingredients, in order to do so we search our data string and find the ingredient given in the text and we return the starting index and ending index of each ingredient in the given text."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,13 +115,23 @@
     "            first = last + 1\n",
     "        while (last <= first):\n",
     "            last = ingut.index(chr(10),last+1)\n",
-    "        span.append([first,last])\n",
+    "        if (not ingut[first:last].startswith('دستور شمار')):\n",
+    "            span.append([first,last])\n",
     "    return span"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code block is written to find ingredients in our string. <br>\n",
+    "We split our text by 3 splitors, each showing a specific data part in our input string. <br>\n",
+    "We use our spliter array which contains the amounts in both numbers and uncountable quantities to split data one more time so that we could extract amount for each ingredient seprately. from start of the line to our splitter index will be our ingredient and from our ingredient index to the end of the line will be our ingredient amount."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,6 +156,9 @@
     "    \n",
     "    ing_data = ingut[starting_index:ending_index]\n",
     "    if \"مواد\" in ingut.split(\"\\n\")[0]:\n",
+    "        ing_data= ing_data.split(\"\\n\",1)[1]\n",
+    "    if \"مواد\" in ingut.split(\"\\n\")[1]:\n",
+    "        ing_data= ing_data.split(\"\\n\",1)[1]\n",
     "        ing_data= ing_data.split(\"\\n\",1)[1]\n",
     "        \n",
     "    spliter = ['0', '۰','1', '۱', '2', '۲', '3', '۳', '4', '۴', '5', '۵', '6',\n",
@@ -229,8 +205,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function is written for the foods with multiple recipees and returns an array which contains each recipee starting index."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,22 +231,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following code block we do the following steps which forms our Main:\n",
+    "1. We read our data from the file.\n",
+    "2. Then we find how many way we have to cook the selected food.\n",
+    "3. Then we iterate each way and we call our functions to find ingredients, quantity of them, recipe, span_ingredients and time.\n",
+    "4. We build a dictionary as requested on our homework and we add our data to it."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "substring not found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5728/4168332085.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[0mfirst\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlines\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfirst\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mlast\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindexes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mingredients\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mquantity\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecipe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspan_ingredients\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspan_recipe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtime_passed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfind_ingredients\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlines\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfirst\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mlast\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[0mfinal_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[0mfinal_dict\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'Ingredients'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mingredients\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5728/1709624621.py\u001b[0m in \u001b[0;36mfind_ingredients\u001b[1;34m(ingut)\u001b[0m\n\u001b[0;32m     56\u001b[0m             \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m     \u001b[0mrecipe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspan_recipe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfind_recipe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mingut\u001b[0m \u001b[1;33m,\u001b[0m\u001b[0mending_index\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m     \u001b[0mspan_ingredients\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfindSpanIngredient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mingut\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mingredients\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5728/1899149047.py\u001b[0m in \u001b[0;36mfind_recipe\u001b[1;34m(input_recipe, index)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfind_recipe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_recipe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mrecipe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput_recipe\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mnewline_index\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrecipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mrecipe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrecipe\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnewline_index\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mrecipe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnewline_index\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_recipe\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: substring not found"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'Ingredients': ['',\n",
+       "   'گوشت گوسفندی با استخوان',\n",
+       "   'دنبه',\n",
+       "   'لپه',\n",
+       "   'پیاز متوسط',\n",
+       "   'مغز لیمو عمانی',\n",
+       "   'آب گوجه\\u200cفرنگی',\n",
+       "   'رب گوجه\\u200cفرنگی',\n",
+       "   'سیب\\u200cزمینی',\n",
+       "   'نمک و فلفل'],\n",
+       "  'quantity': ['',\n",
+       "   '۱ کیلو',\n",
+       "   '۳۰۰ گرم',\n",
+       "   'یک فنجان سرخالی',\n",
+       "   'یک عدد',\n",
+       "   'یک قاشق سوپخوری',\n",
+       "   'یک فنجان',\n",
+       "   'یک قاشق سوپخوری',\n",
+       "   '۵ عدد',\n",
+       "   'به مقدار لازم'],\n",
+       "  'recipie': '\\nگوشت و دنبه را پس از شستن ۱۰ قسمت کرده و آن را سرخ کنید تا طلایی شود. پیاز را در روغن سرخ نمایید و لپه خیس\\u200cداده\\u200cشده را به پیاز اضافه کرده و لپه را هم کمی تفت دهید.\\n\\nگوشت سرخ\\u200cشده را با ۴ لیوان آب، زردچوبه، لپه و پیاز داغ با شعله ملایم بپزید. سپس مغز لیمو عمانی را به آبگوشت اضافه کنید. در اواخر طبخ، ۵ تا ۶ عدد سیب\\u200cزمینی را پوست گرفته و با کمی نمک، فلفل و زردچوبه به غذا اضافه می\\u200cکنیم. بعد هم آب گوجه\\u200cفرنگی و رب گوجه\\u200cفرنگی را به آن اضافه کنید. نان سنگک، پیاز، دوغ، سبزی خوردن در کنارش فراموش نشود.',\n",
+       "  'span_ingredients': [[41, 73],\n",
+       "   [74, 88],\n",
+       "   [89, 110],\n",
+       "   [111, 130],\n",
+       "   [131, 163],\n",
+       "   [164, 188],\n",
+       "   [189, 219],\n",
+       "   [220, 237],\n",
+       "   [238, 264]],\n",
+       "  'span_recipie': [275, 772],\n",
+       "  'time': 0.0010077953338623047}]"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
